Fix for deprecated URL constructor